# pulseaudio-modules-nemo

./: meson.build  meson_options.txt
rpm/: pulseaudio-modules-nemo.changes  pulseaudio-modules-nemo.spec
src/: meson.build
src/common/: meson.build
src/common/include/sailfishos/: defines.h
src/mainvolume/: mainvolume.c  mainvolume.h  meson.build  module-meego-mainvolume.c
src/mainvolume/tests/: check_mainvolume.c  meson.build
src/music/: meson.build
src/parameters/: meson.build
src/parameters/testmodule/: meson.build  module-meego-test-parameters.c
src/record/: meson.build  module-meego-record.c
src/sidetone/: meson.build
src/sidetone/tests/: meson.build
src/stream-restore-nemo/: meson.build
src/test/: meson.build
src/voice/: meson.build
